crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@69.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMP_TBL VALUES ('Feb 16 17:32:01 0097 BC');"
---
InsertStmt@0..61
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "TIMESTAMP_TBL"
  Whitespace@25..26 " "
  SelectStmt@26..59
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..59
      AConst@34..59
        Sconst@34..59 "'Feb 16 17:32:01 0097 ..."
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

